--- a/.github/workflows/main_schulz-yomut.yml
+++ b/.github/workflows/main_schulz-yomut.yml
@@ -17,18 +17,21 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-#      - name: Set up Python version
-#        uses: actions/setup-python@v1
-#        with:
-#          python-version: '3.10'
+      - name: Set up Python version
+        uses: actions/setup-python@v1
+        with:
+          python-version: '3.10'
 
-#      - name: Create and start virtual environment
-#        run: |
-#          python -m venv venv
-#          source venv/bin/activate
+      - name: Create and start virtual environment
+        run: |
+          python -m venv venv
+          source venv/bin/activate
       
-#      - name: Install dependencies
-#        run: pip install -r requirements.txt
+      - name: Upgrade pip
+        run: pip install --upgrade pip
+
+      - name: Install dependencies
+        run: pip install -r requirements.txt
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
       
